--- a/fabricjschess/restart2.html
+++ b/fabricjschess/restart2.html
@@ -3,216 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fabric.js Chessboard with Annotations</title>
+    <title>Fabric.js Chessboard with SVG Pieces</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
     <style>
         canvas {
             border: 1px solid #000;
         }
-        #history {
-            width: 400px;
-            height: 200px;
-            overflow-y: auto;
-            border: 1px solid #000;
-            margin-top: 10px;
-            padding: 5px;
-        }
-        #hud {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-        }
-        #instructions {
-            margin-top: 10px;
-            font-size: 14px;
-        }
     </style>
 </head>
 <body>
-    <div id="hud">
-        <div id="white-timer">White: 00:00</div>
-        <div id="black-timer">Black: 00:00</div>
-    </div>
     <canvas id="canvas" width="400" height="400"></canvas>
-    <div id="history"></div>
-    <div id="instructions">
-        <h4>How to Play Chess:</h4>
-        <p>1. Each player takes turns moving one piece.</p>
-        <p>2. The objective is to checkmate the opponent's king.</p>
-        <p>3. Each piece has its own movement rules:</p>
-        <ul>
-            <li>King: Moves one square in any direction.</li>
-            <li>Queen: Moves any number of squares in any direction.</li>
-            <li>Rook: Moves any number of squares horizontally or vertically.</li>
-            <li>Bishop: Moves any number of squares diagonally.</li>
-            <li>Knight: Moves in an L-shape (two squares in one direction and then one square perpendicular).</li>
-            <li>Pawn: Moves forward one square, but captures diagonally.</li>
-        </ul>
-        <p>4. Use algebraic notation (e.g., e2 to e4) for moves.</p>
-    </div>
     <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const canvas = new fabric.Canvas('canvas');
-            const squareSize = 50;
-            let turn = 'white';
-            const history = [];
-            let whiteTime = 300; // 5 minutes
-            let blackTime = 300; // 5 minutes
-            let timerInterval;
+        // Initialize Fabric.js canvas
+        const canvas = new fabric.Canvas('canvas');
 
-            function startTimer() {
-                clearInterval(timerInterval);
-                timerInterval = setInterval(() => {
-                    if (turn === 'white') {
-                        whiteTime--;
-                        updateTimerDisplay('white');
-                    } else {
-                        blackTime--;
-                        updateTimerDisplay('black');
-                    }
-                }, 1000);
-            }
+        // Size of each square
+        const squareSize = 50;
 
-            function updateTimerDisplay(color) {
-                const timerElement = document.getElementById(`${color}-timer`);
-                const time = color === 'white' ? whiteTime : blackTime;
-                const minutes = String(Math.floor(time / 60)).padStart(2, '0');
-                const seconds = String(time % 60).padStart(2, '0');
-                timerElement.innerText = `${color.charAt(0).toUpperCase() + color.slice(1)}: ${minutes}:${seconds}`;
-                if (time <= 0) {
-                    clearInterval(timerInterval);
-                    alert(`${color.charAt(0).toUpperCase() + color.slice(1)} time's up!`);
-                }
-            }
-
-            function createChessboard() {
-                for (let row = 0; row < 8; row++) {
-                    for (let col = 0; col < 8; col++) {
-                        const isLightSquare = (row + col) % 2 === 0;
-                        const square = new fabric.Rect({
-                            left: col * squareSize,
-                            top: row * squareSize,
-                            fill: isLightSquare ? '#eee' : '#8B4513',
-                            width: squareSize,
-                            height: squareSize,
-                            selectable: false
-                        });
-                        canvas.add(square);
-                    }
-                }
-
-                // Mark ranks (1-8)
-                for (let i = 0; i < 8; i++) {
-                    const text = new fabric.Text((8 - i).toString(), {
-                        left: 0,
-                        top: i * squareSize + squareSize / 2,
-                        fontSize: 20,
-                        originX: 'center',
-                        originY: 'center',
+        // Create the chessboard
+        function createChessboard() {
+            for (let row = 0; row < 8; row++) {
+                for (let col = 0; col < 8; col++) {
+                    const isLightSquare = (row + col) % 2 === 0;
+                    const square = new fabric.Rect({
+                        left: col * squareSize,
+                        top: row * squareSize,
+                        fill: isLightSquare ? '#eee' : '#333',
+                        width: squareSize,
+                        height: squareSize,
                         selectable: false
                     });
-                    canvas.add(text);
-                }
-
-                // Mark files (a-h)
-                for (let i = 0; i < 8; i++) {
-                    const text = new fabric.Text(String.fromCharCode(97 + i), {
-                        left: i * squareSize + squareSize / 2,
-                        top: 400,
-                        fontSize: 20,
-                        originX: 'center',
-                        originY: 'center',
-                        selectable: false
-                    });
-                    canvas.add(text);
+                    canvas.add(square);
                 }
             }
+        }
 
-            function addPieces() {
-                const pieces = {
-                    'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg',
-                    'n': 'https://upload.wikimedia.org/wikipedia/commons/e/ef/Chess_ndt45.svg',
-                    'b': 'https://upload.wikimedia.org/wikipedia/commons/9/98/Chess_bdt45.svg',
-                    'q': 'https://upload.wikimedia.org/wikipedia/commons/4/47/Chess_qdt45.svg',
-                    'k': 'https://upload.wikimedia.org/wikipedia/commons/f/f0/Chess_kdt45.svg',
-                    'p': 'https://upload.wikimedia.org/wikipedia/commons/c/c7/Chess_pdt45.svg',
-                    'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg',
-                    'N': 'https://upload.wikimedia.org/wikipedia/commons/7/70/Chess_nlt45.svg',
-                    'B': 'https://upload.wikimedia.org/wikipedia/commons/b/b1/Chess_blt45.svg',
-                    'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/15/Chess_qlt45.svg',
-                    'K': 'https://upload.wikimedia.org/wikipedia/commons/4/42/Chess_klt45.svg',
-                    'P': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_plt45.svg'
-                };
+        // Load SVG pieces onto the chessboard
+        function addPieces() {
+            const pieces = {
+                'r': 'https://upload.wikimedia.org/wikipedia/commons/f/ff/Chess_rdt45.svg', // black rook yes
+                'n': 'https://upload.wikimedia.org/wikipedia/commons/8/81/Chess_ndt45.svg', // black knight
+                'b': 'https://upload.wikimedia.org/wikipedia/commons/e/e4/Chess_bdt45.svg', // black bishop
+                'q': 'https://upload.wikimedia.org/wikipedia/commons/4/49/Chess_qdt45.svg', // black queen
+                'k': 'Chess_kdt45.svg', // black king
+                'p': 'https://upload.wikimedia.org/wikipedia/commons/4/45/Chess_pdt45.svg', // black pawn
+                'R': 'https://upload.wikimedia.org/wikipedia/commons/7/72/Chess_rlt45.svg', // white rook yes
+                'N': 'https://upload.wikimedia.org/wikipedia/commons/2/25/Chess_nlt45.svg', // white knight
+                'B': 'https://upload.wikimedia.org/wikipedia/commons/7/74/Chess_blt45.svg', // white bishop
+                'Q': 'https://upload.wikimedia.org/wikipedia/commons/1/1a/Chess_qlt45.svg', // white queen
+                'K': 'Chess_klt45.svg', // white king
+                'P': 'https://upload.wikimedia.org/wikipedia/commons/3/39/Chess_plt45.svg'  // white pawn
+            };
 
-                const boardState = [
-                    ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
-                    ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
-                    ['.', '.', '.', '.', '.', '.', '.', '.'],
-                    ['.', '.', '.', '.', '.', '.', '.', '.'],
-                    ['.', '.', '.', '.', '.', '.', '.', '.'],
-                    ['.', '.', '.', '.', '.', '.', '.', '.'],
-                    ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
-                    ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
-                ];
+            const boardState = [
+                ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
+                ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
+                ['.', '.', '.', '.', '.', '.', '.', '.'],
+                ['.', '.', '.', '.', '.', '.', '.', '.'],
+                ['.', '.', '.', '.', '.', '.', '.', '.'],
+                ['.', '.', '.', '.', '.', '.', '.', '.'],
+                ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
+                ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
+            ];
 
-                for (let row = 0; row < 8; row++) {
-                    for (let col = 0; col < 8; col++) {
-                        const piece = boardState[row][col];
-                        if (piece !== '.') {
-                            fabric.loadSVGFromURL(pieces[piece], function(objects, options) {
-                                const svgPiece = fabric.util.groupSVGElements(objects, options);
-                                svgPiece.set({
-                                    left: col * squareSize + squareSize / 2,
-                                    top: row * squareSize + squareSize / 2,
-                                    originX: 'center',
-                                    originY: 'center',
-                                    hasControls: false,
-                                    selectable: true,
-                                    pieceColor: piece === piece.toUpperCase() ? 'white' : 'black'
-                                });
-
-                                // Mouse event handlers
-                                svgPiece.on('mousedown', function() {
-                                    console.log(`Piece selected: ${piece}`);
-                                    if ((turn === 'white' && this.pieceColor === 'white') || 
-                                        (turn === 'black' && this.pieceColor === 'black')) {
-                                        canvas.setActiveObject(this);
-                                    }
-                                });
-                                svgPiece.on('mouseup', function() {
-                                    const activeObject = canvas.getActiveObject();
-                                    if (activeObject === this) {
-                                        const fromPosition = coordsToPosition(this.left, this.top);
-                                        console.log(`Move from: ${fromPosition}`);
-                                        alert(`Select destination square for ${piece} (current position: ${fromPosition})`);
-                                    }
-                                });
-                                canvas.add(svgPiece);
+            for (let row = 0; row < 8; row++) {
+                for (let col = 0; col < 8; col++) {
+                    const piece = boardState[row][col];
+                    if (piece !== '.') {
+                        // Load the SVG piece
+                        fabric.loadSVGFromURL(pieces[piece], function(objects, options) {
+                            const svgPiece = fabric.util.groupSVGElements(objects, options);
+                            svgPiece.set({
+                                left: col * squareSize + squareSize / 2,
+                                top: row * squareSize + squareSize / 2,
+                                originX: 'center',
+                                originY: 'center',
+                                selectable: false // Pieces are not selectable
                             });
-                        }
+                            canvas.add(svgPiece);
+                        });
                     }
                 }
             }
+        }
 
-            function coordsToPosition(left, top) {
-                const col = Math.floor(left / squareSize);
-                const row = 8 - Math.floor(top / squareSize);
-                return String.fromCharCode(col + 'a'.charCodeAt(0)) + row;
-            }
-
-            function updateHistory(move) {
-                history.push(move);
-                const historyDiv = document.getElementById('history');
-                historyDiv.innerHTML = history.join('<br/>');
-            }
-
-            function movePiece(from, to) {
-                const piece
-            }
-
-            createChessboard();
-            addPieces();
-        });
+        // Initialize the chessboard and add the pieces
+        createChessboard();
+        addPieces();
     </script>
 </body>
 </html>
